--- a/DOM/index.html
+++ b/DOM/index.html
@@ -9,8 +9,13 @@
   <body>
     <div class="container">
         <div class="row">
-            <h1 style="color: red;" id="header"  class="m-5 htag" >DOM <span>hi</span></h1>
+            <h1 style="color: red;" id="header"  class="m-5 htag" id="header">DOM <span>hi</span></h1>
         <button type="button" id="button" class="btn btn-success">Click me</button>
+        </div>
+        <div class="inputs">
+          <form action="">
+          <input type="text" class="">
+          <input type="submit" id="addTask" value="addTask"></form>
         </div>
         <div class="list">
           <ul>
@@ -39,6 +44,7 @@
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script src="script.js"></script> 
+<!-- <script src="script.js"></script>  -->
+<script src="eventlisener.js"></script> 
 </body>
 </html>
