--- a/react-practice/public/index.html
+++ b/react-practice/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="./download.png" />
     <title>React Practice</title>
     <link rel="stylesheet" href="style.css">
   </head>
